test/files/neg/xml-quasiquote.scala
import reflect.runtime.universe._

object foo {
  val ns1 =
    q"<sample xmlns='ns1'/>"
}
