test/files/neg/xml-quasiquote.check
<quasiquote>:1: error: To compile XML syntax, the scala.xml package must be on the classpath.
Please see https://github.com/scala/scala-xml for details.
<sample xmlns='ns1'/>
^
one error found
